Teachers/Admin can now create multiple Weekly Tasks. Fixed 'Time Spent' error. Fixed sorting on Courses#Index.

--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -52,6 +52,16 @@
   padding-top: 5px;
 }
 
+.fa-solid.fa-plus {
+  color: #6CC680;
+  font-size: 31px;
+  transition: ease 0.3s;
+}
+
+.fa-solid.fa-plus:hover {
+  color: #4FBA66;
+}
+
 .fa-solid.fa-pen-to-square {
   color: #5A8FCB;
   font-size: 28px;
