--- a/app/views/courses/new.html.erb
+++ b/app/views/courses/new.html.erb
@@ -44,7 +44,7 @@
           </select>
 
           <button type="button" id="add-question-button" class="btn btn-success" data-action="click->course-form#addQuestion">
-            <i class="fa-solid fa-plus"></i> Add Question
+            Add Question
           </button>
         </div>
 
