--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -7,8 +7,10 @@
   <div class="main-content flex-grow-1">
     <h1 class="mb-4">My Courses</h1>
 
-    <% if @registered_courses.any? %>
-      <% @registered_courses.each do |course| %>
+    <% if @registered_courses_with_attempts.any? %>
+      <% @registered_courses_with_attempts.each do |course_with_attempt| %>
+        <% course = course_with_attempt[:course] %> <!-- Extract the course from the data structure -->
+
         <div class="card-white mb-4 p-4">
           <h2><%= course.title %></h2>
           <p><%= course.description %></p>
