--- a/app/views/courses/weekly_task.html.erb
+++ b/app/views/courses/weekly_task.html.erb
@@ -9,14 +9,14 @@
 
   <!-- Main Content -->
   <div class="main-content flex-grow-1">
-    <h1 class="mb-4">Create a Weekly Task</h1>
+    <h1 class="mb-4">Weektaak aanmaken</h1>
 
     <div class="card-white p-4">
       <%= simple_form_for @course, url: create_weekly_task_courses_path, method: :post, html: { multipart: true, data: { turbo: true } } do |f| %>
         
         <!-- Group Selection -->
         <div class="form-group">
-          <label for="groupSelect" class="mb-2">Assign task to these groups</label>
+          <label for="groupSelect" class="mb-2">Weektaak toevoegen aan deze groepen</label>
           <%= select_tag "group_ids[]", options_from_collection_for_select(@groups, "id", "name"), multiple: true, class: "form-control", id: "groupSelect", data: { controller: "tom-select" } %>
         </div>
 
@@ -28,19 +28,19 @@
         <!-- Question Type Dropdown and Add Question Button -->
         <div class="d-flex align-items-center my-4">
           <select id="question-type-dropdown" class="form-select me-3" style="max-width: 300px;" data-course-form-target="questionTypeDropdown">
-            <option value="multiple_choice">Multiple Choice</option>
-            <option value="open_answer">Open Answer</option>
-            <option value="true_false">True/False</option>
-            <option value="multiple_answer">Multiple Answer</option>
+            <option value="multiple_choice">Meerkeuze vraag</option>
+            <option value="open_answer">Open vraag</option>
+            <option value="true_false">Goed/Fout</option>
+            <option value="multiple_answer">Meerkeuze antwoord</option>
           </select>
 
           <button type="button" id="add-question-button" class="btn btn-success" data-action="click->course-form#addQuestion">
-            Add Question
+            Vraag toevoegen
           </button>
         </div>
 
         <!-- Submit Button -->
-        <%= f.submit "Create Weekly Task", class: "btn btn-primary mb-2" %>
+        <%= f.submit "Weektaak aanmaken", class: "btn btn-primary mb-2" %>
       <% end %>
     </div>
   </div>
