--- a/app/views/devise/mailer/unlock_instructions.html.erb
+++ b/app/views/devise/mailer/unlock_instructions.html.erb
@@ -1,7 +1,7 @@
-<p>Hello <%= @resource.email %>!</p>
+<p>Hoi <%= @resource.email %>!</p>
 
-<p>Your account has been locked due to an excessive number of unsuccessful sign in attempts.</p>
+<p>Je account is geblokkeerd door een grote aantal mislukte inlog pogingen.</p>
 
-<p>Click the link below to unlock your account:</p>
+<p>Klik onderstaande link om je account te deblokkeren:</p>
 
-<p><%= link_to 'Unlock my account', unlock_url(@resource, unlock_token: @token) %></p>
+<p><%= link_to 'Account deblokkeren', unlock_url(@resource, unlock_token: @token) %></p>
