--- a/app/views/dashboards/edit_user_profile.html.erb
+++ b/app/views/dashboards/edit_user_profile.html.erb
@@ -27,22 +27,16 @@
                   autofocus: true,
                   input_html: { autocomplete: "email" } %>
 
-      <!-- Role (Student or Teacher) -->
-      <%= f.input :role, 
-                  as: :select, 
-                  label: "Ik ben een", 
-                  collection: [['Student', 'student'], ['Leraar', 'teacher']], 
-                  selected: @user.role %>
 
       <div class="form-actions">
         <%= f.button :submit, "BIJWERKEN", class: "btn btn-azure btn-form" %>
       </div>
 
       <!-- Account annuleren section -->
-      <h3 class="mt-5 text-center">Account annuleren</h3>
+      <%# <h3 class="mt-5 text-center">Account annuleren</h3> %>
 
       <div class="text-center mt-3">
-        Ontevreden? <%= link_to "Delete User", dashboard_delete_user_path(@user), method: :delete, data: { confirm: "Weet je het zeker dat je deze gebruiker wilt verwijderen?" }, class: "btn btn-danger ms-2" %>
+        <%= link_to "Gebruiker verwijderen", dashboard_delete_user_path(@user), method: :delete, data: { confirm: "Weet je het zeker dat je deze gebruiker wilt verwijderen?" }, class: "btn btn-danger ms-2" %>
       </div>
 
   <% end %>
