--- a/app/views/dashboards/manage_users.html.erb
+++ b/app/views/dashboards/manage_users.html.erb
@@ -4,7 +4,7 @@
 
   <!-- Main Content -->
   <div class="main-content flex-grow-1">
-    <h1 class="mb-4">Manage Users</h1>
+    <h1 class="mb-4">Gebruikers beheren</h1>
 
     <% if @users.any? %>
       <div class="card-white p-4">
@@ -13,7 +13,7 @@
             <tr>
               <th style="width: 20%; padding-left: 20px;">
                 <div class="d-flex align-items-center">
-                  <span>First Name</span>
+                  <span>Voornaam</span>
                   <%= link_to dashboard_manage_users_path(sort: 'first_name', direction: params[:direction] == 'asc' ? 'desc' : 'asc'), class: 'ms-2' do %>
                     <% if params[:sort] == 'first_name' %>
                       <% if params[:direction] == 'asc' %>
@@ -29,7 +29,7 @@
               </th>
               <th style="width: 20%;">
                 <div class="d-flex align-items-center">
-                  <span>Last Name</span>
+                  <span>Achternaam</span>
                   <%= link_to dashboard_manage_users_path(sort: 'last_name', direction: params[:direction] == 'asc' ? 'desc' : 'asc'), class: 'ms-2' do %>
                     <% if params[:sort] == 'last_name' %>
                       <% if params[:direction] == 'asc' %>
@@ -46,7 +46,7 @@
               <th style="width: 25%;">Email</th>
               <th style="width: 15%;">
                 <div class="d-flex align-items-center">
-                  <span>Role</span>
+                  <span>Type</span>
                   <%= link_to dashboard_manage_users_path(sort: 'role', direction: params[:direction] == 'asc' ? 'desc' : 'asc'), class: 'ms-2' do %>
                     <% if params[:sort] == 'role' %>
                       <% if params[:direction] == 'asc' %>
@@ -60,7 +60,7 @@
                   <% end %>
                 </div>
               </th>
-              <th style="width: 20%;">Actions</th>
+              <th style="width: 20%;">Acties</th>
             </tr>
           </thead>
           <tbody>
@@ -71,7 +71,7 @@
                 <td><%= user.email %></td>
                 <td><%= user.role.capitalize %></td>
                 <td>
-                  <%= link_to "Edit Profile", dashboard_edit_user_profile_path(user), class: "btn btn-primary", style: "font-family: 'Work Sans', sans-serif;" %>
+                  <%= link_to "Aanpassen", dashboard_edit_user_profile_path(user), class: "btn btn-primary", style: "font-family: 'Work Sans', sans-serif;" %>
                 </td>
               </tr>
             <% end %>
@@ -79,7 +79,7 @@
         </table>
       </div>
     <% else %>
-      <p>No users available to manage.</p>
+      <p>Nog geen gebruikers.</p>
     <% end %>
   </div>
 </div>
