--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -8,7 +8,7 @@
     <!-- Manage Users (Admin only) -->
     <% if current_user.admin? %>
       <li class="nav-item">
-        <a class="nav-link <%= 'active' if controller_name == 'dashboards' && action_name == 'manage_users' %>" href="<%= dashboard_manage_users_path %>">Bekijk gebruikers</a>
+        <a class="nav-link <%= 'active' if controller_name == 'dashboards' && action_name == 'manage_users' %>" href="<%= dashboard_manage_users_path %>">Gebruikers</a>
       </li>
     <% end %>
 
